# pocket-whisper

./: .gitignore  DEPLOYMENT_GUIDE.md  EXECUTORCH_SETUP.md  EXPORT_LOGS_EXPLAINED.md  EXPORT_PROGRESS.md  IMPLEMENTATION_GUIDE.md  IMPLEMENTATION_STATUS.md  MEL_PREPROCESSING_NOTE.md  MODEL_EXPORT_COMPLETE.md  MVP_README.md  PRODUCTION_FIXES.md  PROJECT_STATUS.md  PROJECT_SUMMARY.md  QNN_NPU_GUIDE.md  QUICKSTART.md  QUICK_START.md  README.md  README.md.backup  SESSION_SUMMARY.md  SETUP.md  STATUS_SUMMARY.md  TECHNICAL_REFERENCES.md  android-studio.dmg  build_and_deploy.sh  gradle.properties  index.html  local.properties.template  pocket-whisper.code-workspace  pocket_whisper_on_device_next_word_assist_s_25_ultra.md  quick_start.bat  quick_start.sh  requirements-ml.txt  requirements.txt  requirements.txt.backup  sample.py  settings.gradle.kts  setup_android_dev.sh  setup_android_studio.sh  verify_phase1.sh
app/: build.gradle.kts  proguard-rules.pro
app/src/main/cpp/: CMakeLists.txt  whisper_jni.cpp
export/: README.md  export_all.py  export_all_mobile.py  export_asr.py  export_asr_decoder.py  export_asr_full.py  export_asr_simple.py  export_asr_torchscript.py  export_llm.py  export_llm_minimal.py  export_llm_simple.py  export_llm_torchscript.py  export_mel_preprocessor.py  export_vad.py  export_vad_simple.py  export_vad_torchscript.py  requirements-export.txt  test_export_setup.py  test_vad_model.py
scripts/: benchmark.py  build_executorch_android.sh  generate_test_audio.py  setup_whisper_cpp.sh  validate_all_models.py  validate_env.py  verify_exports.py
(+24 files in other folders)
